<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ForgotPasswordFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/guidelineForgotPasswordUp"
        app:layout_constraintStart_toStartOf="@id/guidelineForgotPasswordLeft"
        app:layout_constraintBottom_toBottomOf="@id/guidelineForgotPasswordDown"
        app:layout_constraintEnd_toEndOf="@id/guidelineForgotPasswordRight">


        <ImageView
            android:id="@+id/login_backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            app:layout_constraintTop_toTopOf="@id/guidelineLoginUp"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="32dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_email_account_to_reset_your_password"
            android:textSize="18sp"
            android:textColor="@color/grey"
            android:gravity="center"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_grey_bg"
                android:hint="@string/email_hint"
                android:textSize="18sp"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/resetPassword_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textSize="18sp"
            android:background="@drawable/cat_blue_bg"
            android:layout_marginTop="24dp"/>

    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineForgotPasswordLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.050890584" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineForgotPasswordRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.949109416" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineForgotPasswordUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.024783147" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineForgotPasswordDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.975216853" />

</androidx.constraintlayout.widget.ConstraintLayout>